errors fixed